// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AreaPropertyOverview renders correctly for empty search 1`] = `
<AreaPropertyOverview
  searchTerm=""
>
  <div>
    You need to search for a postcode!
  </div>
</AreaPropertyOverview>
`;

exports[`AreaPropertyOverview renders correctly for search "bn10" 1`] = `
<AreaPropertyOverview
  searchTerm="bn10"
>
  <div>
    Loading...
  </div>
</AreaPropertyOverview>
`;

exports[`AreaPropertyOverview search receiving empty data renders correctly 1`] = `
<AreaPropertyOverview
  searchTerm="bn10"
>
  <div>
    No search results found
  </div>
</AreaPropertyOverview>
`;

exports[`AreaPropertyOverview search receiving null as data renders correctly 1`] = `
<AreaPropertyOverview
  searchTerm="bn10"
>
  <div>
    No search results found
  </div>
</AreaPropertyOverview>
`;

exports[`AreaPropertyOverview search updates data correctly updates correctly 1`] = `
<AreaPropertyOverview
  searchTerm="bn11"
>
  <div
    className="search-result"
  >
    <AreaOverviewDetails
      area={
        Object {
          "area_name": undefined,
          "country": undefined,
          "county": undefined,
          "postcode": undefined,
          "street": undefined,
          "town": undefined,
          "zed_index": undefined,
        }
      }
    >
      <ul>
        <li>
          Country: 
        </li>
        <li>
          County: 
        </li>
        <li>
           Average property price: £
           
        </li>
      </ul>
    </AreaOverviewDetails>
    <AreaPriceChart
      data={Array []}
    >
      <div>
        <h2
          className="subtitle"
        >
          Average property price over last 5 years
        </h2>
        <LineChart
          axes={true}
          axisLabels={
            Object {
              "x": "Last 5 years",
              "y": "Average property price",
            }
          }
          clickHandler={[Function]}
          data={
            Array [
              Array [],
            ]
          }
          dataPoints={true}
          datePattern="%d-%b-%y"
          height={300}
          interpolate="cardinal"
          lineColors={Array []}
          mouseMoveHandler={[Function]}
          mouseOutHandler={[Function]}
          mouseOverHandler={[Function]}
          width={700}
          xType="text"
          yType="linear"
        >
          <div
            className="line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac"
          >
            <Style
              rules={
                Object {
                  ".area": Object {
                    "opacity": 0.7,
                  },
                  ".area:hover": Object {
                    "opacity": 1,
                  },
                  ".axis": Object {
                    "font-family": "dobra-light,Arial,sans-serif",
                    "font-size": "9px",
                  },
                  ".axis .label": Object {
                    "font": "14px arial",
                  },
                  ".axis path, .axis line": Object {
                    "fill": "none",
                    "shape-rendering": "crispEdges",
                    "strokeWidth": 1,
                  },
                  ".bar": Object {
                    "fill": "blue",
                    "opacity": 1,
                    "transition": "x 0.35s ease-in, y 0.35s ease-in, height 0.5s ease-in, width 0.5s ease-in",
                  },
                  ".bar:hover": Object {
                    "opacity": 0.8,
                  },
                  ".dot": Object {
                    "opacity": 0.85,
                    "strokeWidth": 0,
                    "transition": "cx 0.35s ease-in, cy 0.35s ease-in, r 0.5s ease-in",
                  },
                  ".dot:hover": Object {
                    "opacity": 1,
                  },
                  ".line": Object {
                    "fill": "none",
                    "opacity": 0.7,
                    "strokeWidth": 1.5,
                  },
                  ".line:hover": Object {
                    "opacity": 1,
                  },
                  ".pie-chart-label": Object {
                    "fill": "#000",
                    "fontFamily": "sans-serif",
                    "fontSize": "12px",
                    "textAnchor": "middle",
                  },
                  ".pie-chart-slice": Object {
                    "opacity": "1",
                    "stroke": "#fff",
                    "strokeWidth": 1,
                  },
                  ".pie-chart-slice:hover": Object {
                    "opacity": "0.8",
                  },
                  ".tick line": Object {
                    "opacity": "0.7",
                    "stroke": "lightgrey",
                    "strokeWidth": 1,
                  },
                  ".x circle.tick-circle": Object {
                    "cy": "8px",
                  },
                  ".x circle.tick-circle ": Object {
                    "fill": "lightgrey",
                  },
                  ".y circle.tick-circle": Object {
                    "cx": "-8px",
                    "fill": "lightgrey",
                  },
                  ".y.axis line": Object {
                    "display": "none",
                    "stroke": "lightgrey",
                  },
                  "circle.data-point": Object {
                    "opacity": 0.7,
                    "r": 4,
                    "transition": "cx 0.35s ease-in, cy 0.35s ease-in",
                  },
                  "circle.data-point:hover": Object {
                    "opacity": 1,
                    "r": 6,
                  },
                  "circle.tick-circle": Object {
                    "fill": "lightgrey",
                    "r": 2,
                  },
                  "x.axis path": Object {
                    "display": "none",
                    "stroke": "lightgrey",
                  },
                }
              }
              scopeSelector=".line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac"
            >
              <style
                dangerouslySetInnerHTML={
                  Object {
                    "__html": ".line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .pie-chart-slice{stroke: #fff;
                  stroke-width: 1;
                  opacity: 1;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .pie-chart-slice:hover{opacity: 0.8;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .pie-chart-label{font-family: sans-serif;
                  font-size: 12px;
                  text-anchor: middle;
                  fill: #000;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .bar{fill: blue;
                  transition: x 0.35s ease-in, y 0.35s ease-in, height 0.5s ease-in, width 0.5s ease-in;
                  opacity: 1;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .bar:hover{opacity: 0.8;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .line{fill: none;
                  stroke-width: 1.5;
                  opacity: 0.7;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .line:hover{opacity: 1;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .area{opacity: 0.7;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .area:hover{opacity: 1;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .dot{stroke-width: 0;
                  opacity: 0.85;
                  transition: cx 0.35s ease-in, cy 0.35s ease-in, r 0.5s ease-in;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .dot:hover{opacity: 1;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac circle.data-point{r: 4px;
                  opacity: 0.7;
                  transition: cx 0.35s ease-in, cy 0.35s ease-in;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac circle.data-point:hover{r: 6px;
                  opacity: 1;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac circle.tick-circle{r: 2px;
                  fill: lightgrey;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .x circle.tick-circle{cy: 8px;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .axis{font-family: dobra-light,Arial,sans-serif;
                  font-size: 9px;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .axis .label{font: 14px arial;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .axis path,.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .axis line{fill: none;
                  stroke-width: 1;
                  shape-rendering: crispEdges;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac x.axis path{display: none;
                  stroke: lightgrey;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .tick line{stroke: lightgrey;
                  stroke-width: 1;
                  opacity: 0.7;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .x circle.tick-circle{fill: lightgrey;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .y circle.tick-circle{cx: -8px;
                  fill: lightgrey;}.line-chart-cc84da6e5eda728c44a210ca09adbd1ad7130bac .y.axis line{display: none;
                  stroke: lightgrey;}",
                  }
                }
              />
            </Style>
            <svg
              height={300}
              style={Object {}}
              width={700}
            >
              <g
                style={Object {}}
                transform="translate(50, 20)"
              >
                <g
                  className="x axis"
                  fill="none"
                  fontFamily="sans-serif"
                  fontSize={10}
                  style={Object {}}
                  textAnchor="middle"
                  transform="translate(0, 230)"
                >
                  <path
                    className="domain"
                    d="M0.5,0V0.5H630.5V0"
                    stroke="#000"
                    style={Object {}}
                  />
                  <text
                    className="label"
                    style={
                      Object {
                        "textAnchor": "end",
                      }
                    }
                    x={630}
                    y={40}
                  >
                    Last 5 years
                  </text>
                </g>
                <g
                  className="y axis"
                  fill="none"
                  fontFamily="sans-serif"
                  fontSize={10}
                  style={Object {}}
                  textAnchor="end"
                  transform="translate(0, 0)"
                >
                  <path
                    className="domain"
                    d="M-6,230.5H0.5V0.5H-6"
                    stroke="#000"
                    style={Object {}}
                  />
                  <text
                    className="label"
                    dy=".9em"
                    style={
                      Object {
                        "textAnchor": "end",
                      }
                    }
                    transform="rotate(-90)"
                    x={0}
                    y={-50}
                  >
                    Average property price
                  </text>
                </g>
                <g
                  className="lineChart"
                  style={Object {}}
                >
                  <path
                    className="line"
                    style={
                      Object {
                        "stroke": "#3F4C55",
                      }
                    }
                  />
                </g>
                <g
                  className="dataPoints"
                  style={Object {}}
                />
              </g>
            </svg>
          </div>
        </LineChart>
      </div>
    </AreaPriceChart>
    <GoogleMapWithMarker
      bounds={null}
      center={
        Object {
          "lat": undefined,
          "lng": undefined,
        }
      }
      zoom={11}
    >
      <withScriptjs(withGoogleMap(Component))
        bounds={null}
        center={
          Object {
            "lat": undefined,
            "lng": undefined,
          }
        }
        containerElement={
          <div
            style={
              Object {
                "height": "400px",
              }
            }
          />
        }
        googleMapURL="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBUAx3W_ykWX9gSePohkLo-TRTeNV9iwI&v=3.exp&libraries=geometry,drawing,places"
        loadingElement={
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          />
        }
        mapElement={
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          />
        }
        zoom={11}
      >
        <div
          style={
            Object {
              "height": "100%",
            }
          }
        />
      </withScriptjs(withGoogleMap(Component))>
    </GoogleMapWithMarker>
  </div>
</AreaPropertyOverview>
`;

exports[`AreaPropertyOverview search with failed api call renders correctly 1`] = `
<AreaPropertyOverview
  searchTerm="peacehaven"
>
  <div>
    Please enter a valid postcode! We could not find results for 
    peacehaven
  </div>
</AreaPropertyOverview>
`;
